--- a/HTML/about.html
+++ b/HTML/about.html
@@ -28,7 +28,7 @@
             <li class="navButtons" id="menu">
                 <p>MENU</p>
             </li>
-            <li class="navButtons"> <img class="logo" id="logo" src="../IMAGES/aboutfixed.png"> </li>
+            <li class="navButtons" id="logobg" style="background-image: url(../IMAGES/aboutfixed.png); background-size: contain; background-repeat: no-repeat; background-position: center;"> <img class="logo" id="logo" src="../IMAGES/aboutfixed.png"> </li>
             <li class="navButtons" id="contact">
                 <p>CONTACTS</p>
             </li>
@@ -38,12 +38,12 @@
         </ul>
         <ul class="navBarmobile">
             <li>MENU</li>
-            <li> <img class="logo" id="logo" src="IMAGES/logo.png"> </li>
-            <li>MORE <img src="IMAGES/hamburger.png" style="height: 15px;" alt=""></li>
+            <li> <a href="../index.html"><img class="logo" id="logo" src="../IMAGES/logo.png"> </a> </li>
+            <li>MORE <img src="../IMAGES/hamburger.png" style="height: 15px;" alt=""></li>
         </ul>
     </header>
     <article class="a1">
-        <div class="missiontab">
+        <div class="missiontab mv">
             <div class="missionContent content">
                 <h2>MISSION</h2>
                 <p>
@@ -56,9 +56,10 @@
             </div>
         </div>
         <div class="rollingPin">
-            <img src="../IMAGES/rollingpin.png" style="width: 100px;" alt="">
+            <img src="../IMAGES/rollingpin.png" alt="" class="rollimg">
+            <img src="../IMAGES/rollingpinbaliktad.png" alt="" class="rollimgbaliktad">
         </div>
-        <div class="visiontab">
+        <div class="visiontab mv">
             <div class="visionContent content">
                 <h2>VISION</h2>
                 <p>
