--- a/HTML/about.html
+++ b/HTML/about.html
@@ -36,10 +36,28 @@
                 <p>ORDER NOW</p>
             </li>
         </ul>
+        <nav id="navbar">
+            <ul class="navbar">
+                <li><button id="close-sidebar-button" onclick="closeSidebar()">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="40px" viewBox="0 -960 960 960" width="40px" fill="#000000"><path d="m480-444.62-209.69 209.7q-7.23 7.23-17.5 7.42-10.27.19-17.89-7.42-7.61-7.62-7.61-17.7 0-10.07 7.61-17.69L444.62-480l-209.7-209.69q-7.23-7.23-7.42-17.5-.19-10.27 7.42-17.89 7.62-7.61 17.7-7.61 10.07 0 17.69 7.61L480-515.38l209.69-209.7q7.23-7.23 17.5-7.42 10.27-.19 17.89 7.42 7.61 7.62 7.61 17.7 0 10.07-7.61 17.69L515.38-480l209.7 209.69q7.23 7.23 7.42 17.5.19 10.27-7.42 17.89-7.62 7.61-17.7 7.61-10.07 0-17.69-7.61L480-444.62Z"/></svg>
+                </button>
+                </li>
+                <li><a href="HTML/about.html"><p>ABOUT</p></a></li>
+                <li><a href=""><p>MENU</p></a></li>
+                <li><a href="HTML/contacts.html"><p>CONTACTS</p></a></li>
+                <li><a href=""><p>ORDER NOW</p></a></li>
+            </ul>
+        </nav>
+        <div id="overlay" onclick="closeSidebar()">
+        </div>
         <ul class="navBarmobile">
             <li>MENU</li>
-            <li> <a href="../index.html"><img class="logo" id="logo" src="../IMAGES/logo.png"> </a> </li>
-            <li>MORE <img src="../IMAGES/hamburger.png" style="height: 15px;" alt=""></li>
+            <li> <img class="logo" id="logo" src="../IMAGES/logo.png"> </li>
+            <li> 
+                <button id="open-sidebar-button" onclick="openSidebar()">
+                    <img src="../IMAGES/hamburger.png" style="height: 20px;" alt="">
+                </button>
+            </li>
         </ul>
     </header>
     <article class="a1">
