--- a/index.html
+++ b/index.html
@@ -261,7 +261,20 @@
             </div>
         </div>
     </section>
-
+    <section class="container">
+        <div class="slider-wrapper">
+            <div class="slider">
+                <div id="slide-1"><img src="IMAGES/groupedfixed.png" alt="..." /></div>
+                <div id="slide-2">HEY<img src="..." alt="..." /></div>
+                <div id="slide-3"><img src="..." alt="..." /></div>
+            </div>            
+            <div class="slider-nav">
+                <a href="#slide-1"></a>
+                <a href="#slide-2"></a>
+                <a href="#slide-3"></a>
+            </div>
+        </div>
+    </section>
     <section class="s3 s">
         <div class="frame">
             <img src="IMAGES/Picture6_element.png" alt="">
@@ -277,6 +290,9 @@
         </div>
     </section>
 
+    <footer>
+
+    </footer>
 
 </body>
 
