--- a/HTML/menu.html
+++ b/HTML/menu.html
@@ -64,31 +64,36 @@
     <article class="a2">
         <div class="hopiacontainer">
             <div class="hopiacard">
-                <img class="title" src="../IMAGES/download.png" alt="">
-                <img class="hopiaimg" src="../IMAGES/mango.png" alt="">
-                <p>Mango filling that is tropical and smooth, with a touch of zesty flavor and a balance of sweetness.</p>
-                <img class="bottomElement" src="../IMAGES/hopiaproductelement.png" alt="">
-            </div>
-            <div class="hopiacard">
-                <img class="title" src="../IMAGES/download.png" alt="">
-                <img class="hopiaimg" src="../IMAGES/berry.png" alt="">
-                <p>
-                    Strawberry delight with sweet and juicy goodness , ideal for a fruity burst with each bite.
-                </p>
-                <img class="bottomElement" src="../IMAGES/hopiaproductelement.png" alt="">
-            </div>
-            <div class="hopiacard">
-                <img class="title" src="../IMAGES/download.png" alt="">
-                <img class="hopiaimg" src="../IMAGES/berry.png" alt="">
+                <p class="filling">FILLING SILLY?</p>
+                <img class="title" id="mango" src="../IMAGES/silly_mango.png" alt="">
+                <img id="mango" class="hopiaimg" src="../IMAGES/hopiamango.png" alt="">
                 <p>
                     Mango filling that is tropical and smooth, with a touch of zesty flavor and a balance of sweetness.
                 </p>
                 <img class="bottomElement" src="../IMAGES/hopiaproductelement.png" alt="">
             </div>
             <div class="hopiacard">
-                <img class="title" src="../IMAGES/download.png" alt="">
-                <img class="hopiaimg" src="../IMAGES/mango.png" alt="">
-                <p>Mango filling that is tropical and smooth, with a touch of zesty flavor and a balance of sweetness.</p>
+                <img class="title" id="strawberry" src="../IMAGES/berry_lovely.png" alt="">
+                <img id="strawberry" class="hopiaimg" src="../IMAGES/hopiastrawberry.png" alt="">
+                <p>
+                    Strawberry delight with sweet and juicy goodness, ideal for a fruity burst with each bite.
+                </p>
+                <img class="bottomElement" src="../IMAGES/hopiaproductelement.png" alt="">
+            </div>
+            <div class="hopiacard">
+                <img class="title" id="apple" src="../IMAGES/blissful_apple.png" alt="">
+                <img id="apple" class="hopiaimg" src="../IMAGES/hopiaapple.png" alt="">
+                <p>
+                    A classic and cozy apple filling with a blend of sweetness and cinnamon.
+                </p>
+                <img class="bottomElement" src="../IMAGES/hopiaproductelement.png" alt="">
+            </div>
+            <div class="hopiacard">
+                <img class="title" id="pandan" src="../IMAGES/buco_loco.png" alt="">
+                <img id="pandan" class="hopiaimg" src="../IMAGES/hopiapandan.png" alt="">
+                <p>
+                    Rich and reviving  creamy combination of young coconut and pandan flavor.
+                </p>
                 <img class="bottomElement" src="../IMAGES/hopiaproductelement.png" alt="">
             </div>
         </div>
