--- a/index.html
+++ b/index.html
@@ -139,10 +139,10 @@
                         <hr>
                     </div>
                     <input type="hidden" name="access_key" value="9a6cffed-aeb9-40dc-b892-955f7032c720">
-                    <input type="text" name="name" placeholder="Your Name" class="contact-inputs" required>
-                    <input type="text" name="email" placeholder="Your Email" class="contact-inputs" required>
-                    <textarea name="message" placeholder="Your Message" class="contact-inputs" required></textarea>
-                    <button type="submit">Submit</button>
+                <input type="text" name="name" placeholder="Your Name, leave empty to remain anonymous." class="contact-inputs" >
+                <input type="text" name="email" placeholder="Your Email, leave empty to remain anonymous." class="contact-inputs" >
+                <textarea name="message" placeholder="Your Message" class="contact-inputs" required></textarea>
+                <button type="submit">Submit</button>
                 </form>
                 <div class="contact-right">
                     <div>
@@ -228,9 +228,6 @@
                     </ul>
                 </div>
             </div>
-            <div>
-                
-            </div>
         </section>
     </div>
     <section class="subSection s">
@@ -265,7 +262,7 @@
         <div class="slider-wrapper">
             <div class="slider">
                 <div id="slide-1"><img src="IMAGES/groupedfixed.png" alt="..." /></div>
-                <div id="slide-2">HEY<img src="..." alt="..." /></div>
+                <div id="slide-2"><img src="IMAGES/coffee.jpg" alt="..." /></div>
                 <div id="slide-3"><img src="..." alt="..." /></div>
             </div>            
             <div class="slider-nav">
