--- a/HTML/order.html
+++ b/HTML/order.html
@@ -14,22 +14,25 @@
 </head>
 <body>
     <header>
+        <nav>
+            <ul class="navBar">
+                <li class="navButtons" id="about">
+                    <a href="about.html"><p>ABOUT</p></a>
+                    
+                </li>
+                <li class="navButtons" id="menu">
+                    <a href="menu.html"><p>MENU</p></a>
+                </li>
+                <li class="navButtons" id="logobg" style="background-image: url(../IMAGES/order.png); background-size: contain; background-repeat: no-repeat; background-position: center;"> <img class="logo" id="logo" src="../IMAGES/menu.png"> </li>
+                <li class="navButtons" id="contact">
+                    <a href="contacts.html"><p>CONTACTS</p></a>
+                </li>
+                <li class="navButtons" id="order">
+                    <a href="../index.html"><p>HOME</p></a>
+                </li>
+            </ul>
+        </nav>
         
-        <ul class="navBar">
-            <li class="navButtons" id="about">
-                <p>ABOUT</p>
-            </li>
-            <li class="navButtons" id="menu">
-                <p>MENU</p>
-            </li>
-            <li class="navButtons" id="logobg" style="background-image: url(../IMAGES/order.png); background-size: contain; background-repeat: no-repeat; background-position: center;"> <img class="logo" id="logo" src="../IMAGES/menu.png"> </li>
-            <li class="navButtons" id="contact">
-                <p>CONTACTS</p>
-            </li>
-            <li class="navButtons" id="order">
-                <p>ORDER NOW</p>
-            </li>
-        </ul>
         <nav id="navbar">
             <ul class="navbar">
                 <li><button id="close-sidebar-button" onclick="closeSidebar()">
