--- a/HTML/contacts.html
+++ b/HTML/contacts.html
@@ -94,5 +94,28 @@
             </div>
         </div>
     </div>
+    <article class="a1">
+        <div class="backdrop-content">
+            <div style="z-index: 2;"><h1>LEAVE US SOME FEEDBACK!</h1></div>
+            <div class="grid">
+                <div>
+                    <p>LET US ALL KNOW YOUR OVERALL SATISTACTION WITH OUT PRODUCT ON OUR GOOGLE FORM</p>
+                    <a href="https://forms.gle/vgsPWHWp7whMd58MA">https://forms.gle/vgsPWHWp7whMd58MA</a>
+                </div>
+                <div>
+                    
+                <img src="../IMAGES/dropboxreal.png" alt="">
+                </div>
+            </div>
+            <img class="backdrop" src="../IMAGES/behind.png" alt="">
+        </div>
+    </article>
+    <footer>
+        <div class="footer-icon">
+            <img src="../IMAGES/fbbrown.jpg" alt="">
+            <img src="../IMAGES/igbrown.jpg" alt="">
+        </div>
+        <p>Fruitopia Food Corp.</p>
+    </footer>
 </body>
 </html>
