--- a/index.html
+++ b/index.html
@@ -156,34 +156,37 @@
                 </div>
             </div>
         </div>
-        <div class="contacts headerpagecontents" id="contactsContainer">
-            <div class="contact-container">
+        <div class="contacts headerpagecontents" id="contactsContainer" style="height: 100vh;">
+            <div class="contact-container" style="margin-top: 5%;">
                 <form action="https://api.web3forms.com/submit" method="POST" class="contact-left">
                     <div class="contact-left-title">
-                        <h2>GET IN TOUCH</h2>
+                        <h2>LEAVE US SOME FEEDBACK!</h2>
                         <hr>
                     </div>
                     <input type="hidden" name="access_key" value="9a6cffed-aeb9-40dc-b892-955f7032c720">
-                <input type="text" name="name" placeholder="Your Name, leave empty to remain anonymous." class="contact-inputs" >
-                <input type="text" name="email" placeholder="Your Email, leave empty to remain anonymous." class="contact-inputs" >
-                <textarea name="message" placeholder="Your Message" class="contact-inputs" required></textarea>
-                <button type="submit">Submit</button>
+                    <input type="text" name="name" placeholder="Your Name, leave empty to remain anonymous." class="contact-inputs" >
+                    <input type="text" name="email" placeholder="Your Email, leave empty to remain anonymous." class="contact-inputs" >
+                    <textarea name="message" placeholder="Your Message" class="contact-inputs" required></textarea>
+                    <button type="submit">Submit</button>
                 </form>
                 <div class="contact-right">
+                    <div class="intouch" style="padding: 0;">
+                        <h2 style="margin: 0; font-weight: 600; font-size: 40px; margin-bottom: 5px; padding-inline-end: 100px;">GET IN TOUCH WITH US ON OUR SOCIALS</h2>
+                    </div>
                     <div>
-                        <img style="border-radius: 20%;" src="IMAGES/fbbrown.jpg" alt="">
+                        <img style="border-radius: 20%;" src="../IMAGES/fbbrown.jpg" alt="">
                         <a href="https://www.facebook.com/profile.php?id=61573540895348#"><p>Fruitopia Food Corp.</p></a> 
                     </div>
                     <div>
-                        <img style="border-radius: 20%;" src="IMAGES/igbrown.jpg" alt="">
+                        <img style="border-radius: 20%;" src="../IMAGES/igbrown.jpg" alt="">
                         <a href="https://www.instagram.com/fruitopia.food_corporation/?utm_source=ig_web_button_share_sheet"><p>fruitopia.food_corporation</p></a> 
                     </div>
                     <div>
-                        <img src="IMAGES/gmail.png" alt="">
+                        <img src="../IMAGES/gmail.png" alt="">
                         <p>FruitopiaFoodCorporation@gmail.com</p>
                     </div>
                     <div>
-                        <img src="IMAGES/call.png" alt="">
+                        <img src="../IMAGES/call.png" alt="">
                         <p>09455071707</p>
                     </div>
                 </div>
@@ -203,11 +206,11 @@
                     <li class="navButtons" id="menu">
                         <a href="#"><p>MENU</p></a>
                     </li>
-                    <li class="navButtons navlogo"> <img class="logo" id="logo" src="IMAGES/logo.png"> </li>
+                    <li class="navlogo"> <img class="logo" id="logo" src="IMAGES/logo.png"> </li>
                     <li class="navButtons" id="contact">
                         <a href="#"><p>CONTACTS</p></a>
                     </li>
-                    <li class="navButtons" id="order">
+                    <li class="navButtons" id="order" onclick="order()">
                         <a href="HTML/order.html"><p>ORDER NOW</p></a>
                     </li>
                 </ul>
@@ -289,11 +292,13 @@
                 <div id="slide-1"><img src="IMAGES/groupedfixed.png" alt="..." /></div>
                 <div id="slide-2"><img src="IMAGES/coffee.jpg" alt="..." /></div>
                 <div id="slide-3"><img src="IMAGES/contactha.jpg" alt="..." /></div>
+                <div id="slide-4"><img src="IMAGES/raffle.png" alt="..." /></div>
             </div>            
             <div class="slider-nav">
                 <a href="#slide-1"></a>
                 <a href="#slide-2"></a>
                 <a href="#slide-3"></a>
+                <a href="#slide-4"></a>
             </div>
         </div>
     </section>
