--- a/HTML/about.html
+++ b/HTML/about.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="../CSS/about.css">
     <link rel="stylesheet" href="../CSS/headerfooter.css">
     <link rel="stylesheet" href="../CSS/mediaresponsiveness.css">
+    
+    <script src="../JS/navbar.js" defer></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
     </style>
@@ -37,9 +39,9 @@
                     <svg xmlns="http://www.w3.org/2000/svg" height="40px" viewBox="0 -960 960 960" width="40px" fill="#000000"><path d="m480-444.62-209.69 209.7q-7.23 7.23-17.5 7.42-10.27.19-17.89-7.42-7.61-7.62-7.61-17.7 0-10.07 7.61-17.69L444.62-480l-209.7-209.69q-7.23-7.23-7.42-17.5-.19-10.27 7.42-17.89 7.62-7.61 17.7-7.61 10.07 0 17.69 7.61L480-515.38l209.69-209.7q7.23-7.23 17.5-7.42 10.27-.19 17.89 7.42 7.61 7.62 7.61 17.7 0 10.07-7.61 17.69L515.38-480l209.7 209.69q7.23 7.23 7.42 17.5.19 10.27-7.42 17.89-7.62 7.61-17.7 7.61-10.07 0-17.69-7.61L480-444.62Z"/></svg>
                 </button>
                 </li>
-                <li><a href="HTML/about.html"><p>ABOUT</p></a></li>
-                <li><a href=""><p>MENU</p></a></li>
-                <li><a href="HTML/contacts.html"><p>CONTACTS</p></a></li>
+                <li><a href="about.html"><p>ABOUT</p></a></li>
+                <li><a href="menu.html"><p>MENU</p></a></li>
+                <li><a href="contacts.html"><p>CONTACTS</p></a></li>
                 <li><a href=""><p>ORDER NOW</p></a></li>
             </ul>
         </nav>
@@ -94,30 +96,33 @@
             
             <div class="corevalues">
                 <div class="h2p">
-                    <h2>Teamwork</h2>
+                    <h2>Innovation</h2>
                 <p>
-                    Our company promotes well-coordinated and peaceful
-                    environment because if everyone does not have any connection, everything
-                    will fall apart.
+                    Our company and product symbolize uniqueness and
+                    empowers the rise of innovation in food industry by combining different
+                    ingredients, flavors, and textures.
+                </p>
+                </div>
+            </div>
+            <div class="corevalues">
+                <div class="h2p long">
+                    <h2>Integrity</h2>
+                <p>
+                    "The whole is better than the sum of its parts." This quote holds the
+                    whole reputation of Fruitopia food Corp as a company and assures everyone
+                    that our team won't back down to our moral values and serve our customers
+                    with honesty.
                 </p>
                 </div>
             </div>
             <div class="corevalues">
                 <div class="h2p">
-                    <h2>Quality</h2>
+                    <h2>Improvement-driven</h2>
                 <p>
-                    We ensure that our customers are served with quality—from
-                    packaging to the food itself, it is made with quality ingredients and materials.
+                    From products to service, our team will continue to
+                    improve for the betterment of the company. We always ensure that our
+                    customers come first.
                 </p>
-                </div>
-            </div>
-            <div class="corevalues">
-                <div class="h2p">
-                    <h2>Passionate</h2>
-                <p>
-                    Our team are driven by passion in order to be successful. We
-                    work with smiles on our face while serving the best hopia you could ever
-                    imagine.</p>
                 </div>
             </div>
         </div>
@@ -156,5 +161,12 @@
             </div>
         </div>
     </article>
+    <footer>
+        <div class="footer-icon">
+            <img src="../IMAGES/fbbrown.jpg" alt="">
+            <img src="../IMAGES/igbrown.jpg" alt="">
+        </div>
+        <p>Fruitopia Food Corp.</p>
+    </footer>
 </body>
 </html>
