--- a/HTML/contacts.html
+++ b/HTML/contacts.html
@@ -58,7 +58,7 @@
         </ul>
     </header>
 
-    <div class="contacts headerpagecontents" id="contactsContainer" style="height: 90vh;">
+    <div class="contacts headerpagecontents" id="contactsContainer" >
         <div class="contact-container">
             <form action="https://api.web3forms.com/submit" method="POST" class="contact-left">
                 <div class="contact-left-title">
@@ -100,7 +100,7 @@
             <div class="grid">
                 <div>
                     <p>LET US ALL KNOW YOUR OVERALL SATISTACTION WITH OUT PRODUCT ON OUR GOOGLE FORM</p>
-                    <a href="https://forms.gle/vgsPWHWp7whMd58MA">https://forms.gle/vgsPWHWp7whMd58MA</a>
+                    <a href="https://forms.gle/vgsPWHWp7whMd58MA">https://forms.gle<br>/vgsPWHWp7whMd58MA</a>
                 </div>
                 <div>
                     
