--- a/HTML/menu.html
+++ b/HTML/menu.html
@@ -38,9 +38,9 @@
                     <svg xmlns="http://www.w3.org/2000/svg" height="40px" viewBox="0 -960 960 960" width="40px" fill="#000000"><path d="m480-444.62-209.69 209.7q-7.23 7.23-17.5 7.42-10.27.19-17.89-7.42-7.61-7.62-7.61-17.7 0-10.07 7.61-17.69L444.62-480l-209.7-209.69q-7.23-7.23-7.42-17.5-.19-10.27 7.42-17.89 7.62-7.61 17.7-7.61 10.07 0 17.69 7.61L480-515.38l209.69-209.7q7.23-7.23 17.5-7.42 10.27-.19 17.89 7.42 7.61 7.62 7.61 17.7 0 10.07-7.61 17.69L515.38-480l209.7 209.69q7.23 7.23 7.42 17.5.19 10.27-7.42 17.89-7.62 7.61-17.7 7.61-10.07 0-17.69-7.61L480-444.62Z"/></svg>
                 </button>
                 </li>
-                <li><a href="HTML/about.html"><p>ABOUT</p></a></li>
+                <li><a href="about.html"><p>ABOUT</p></a></li>
                 <li><a href=""><p>MENU</p></a></li>
-                <li><a href="HTML/contacts.html"><p>CONTACTS</p></a></li>
+                <li><a href="contacts.html"><p>CONTACTS</p></a></li>
                 <li><a href=""><p>ORDER NOW</p></a></li>
             </ul>
         </nav>
@@ -82,7 +82,7 @@
                 <p>
                     Mango filling that is tropical and smooth, with a touch of zesty flavor and a balance of sweetness.
                 </p>
-                <img class="bottomElement" src="../IMAGES/hopiaproductelement.png" alt="">
+                <img class="bottomElement b" src="../IMAGES/hopiaproductelement.png" alt="">
             </div>
             <div class="hopiacard">
                 <div class="moving">
@@ -94,7 +94,7 @@
                 <p>
                     Strawberry delight with sweet and juicy goodness, ideal for a fruity burst with each bite.
                 </p>
-                <img class="bottomElement" src="../IMAGES/hopiaproductelement.png" alt="">
+                <img class="bottomElement b" src="../IMAGES/hopiaproductelement.png" alt="">
             </div>
             <div class="hopiacard">
                 <div class="moving">
@@ -106,7 +106,7 @@
                 <p>
                     A classic and cozy apple filling with a blend of sweetness and cinnamon.
                 </p>
-                <img class="bottomElement" src="../IMAGES/hopiaproductelement.png" alt="">
+                <img class="bottomElement b" src="../IMAGES/hopiaproductelement.png" alt="">
             </div>
             <div class="hopiacard">
                 <div class="moving">
@@ -118,7 +118,7 @@
                 <p>
                     Rich and reviving  creamy combination of young coconut and pandan flavor.
                 </p>
-                <img class="bottomElement" src="../IMAGES/hopiaproductelement.png" alt="">
+                <img class="bottomElement b" src="../IMAGES/hopiaproductelement.png" alt="">
             </div>
         </div>
     </article>
