--- a/HTML/order.html
+++ b/HTML/order.html
@@ -9,6 +9,12 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
     </style>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap');
+    </style>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Winky+Rough:ital,wght@0,300..900;1,300..900&display=swap');
+    </style>
     <script src="../JS/navbar.js" defer></script>
     <title>Order</title>
 </head>
@@ -98,7 +104,7 @@
             <div class="textna" style="position: relative;">
                 <div class="textcontainer">
                     <h1 style="text-align: center; font-weight: 700; font-size: 30px;">How can I sign up for our raffle prize promotion?</h1>
-                    <p style="text-align: center; font-size: 20px;">
+                    <p style="text-align: center; font-size: 30px;">
                         First, take a screenshot of you following us on our social media accounts (Facebook and Instagram).
                         <br>
                         <br>
