--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
     <script src="JS/animations.js" defer></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+        @import url('https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap');
+
+        @import url('https://fonts.googleapis.com/css2?family=Winky+Rough:ital,wght@0,300..900;1,300..900&display=swap');
+
+        @import url('https://fonts.googleapis.com/css2?family=Special+Gothic+Expanded+One&display=swap');
+
+        @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&display=swap');
     </style>
 </head>
 <body>
@@ -292,7 +300,7 @@
                 <div id="slide-1"><img src="IMAGES/groupedfixed.png" alt="..." /></div>
                 <div id="slide-2"><img src="IMAGES/coffee.jpg" alt="..." /></div>
                 <div id="slide-3"><img src="IMAGES/contactha.jpg" alt="..." /></div>
-                <div id="slide-4"><img src="IMAGES/raffle.png" alt="..." /></div>
+                <div id="slide-4"><img src="IMAGES/Screenshot 2025-04-18 005713.png" alt="..." /></div>
             </div>            
             <div class="slider-nav">
                 <a href="#slide-1"></a>
@@ -311,7 +319,7 @@
         </div>
         <div>
             <video class="scroll-video" playsinline muted>
-                <source src="IMAGES/Media2.mp4" type="video/mp4">
+                <source src="IMAGES/Fruitopia Vid.mp4" type="video/mp4">
                 
               </video>
         </div>
