--- a/HTML/menu.html
+++ b/HTML/menu.html
@@ -22,7 +22,7 @@
                 <li class="navButtons" id="menu">
                     <a href="../index.html"><p>HOME</p></a>
                 </li>
-                <li class="navButtons" id="logobg" style="background-image: url(../IMAGES/menu.png); background-size: contain; background-repeat: no-repeat; background-position: center;"> <img class="logo" id="logo" src="../IMAGES/menu.png"> </li>
+                <li onclick="home()" class="navButtons" id="logobg" style="background-image: url(../IMAGES/menu.png); background-size: contain; background-repeat: no-repeat; background-position: center;"> <img class="logo" id="logo" src="../IMAGES/menu.png"> </li>
                 <li class="navButtons" id="contact">
                     <a href="contacts.html"><p>CONTACTS</p></a>
                 </li>
@@ -39,16 +39,16 @@
                 </button>
                 </li>
                 <li><a href="about.html"><p>ABOUT</p></a></li>
-                <li><a href=""><p>MENU</p></a></li>
+                <li><a href="menu.html"><p>MENU</p></a></li>
                 <li><a href="contacts.html"><p>CONTACTS</p></a></li>
-                <li><a href=""><p>ORDER NOW</p></a></li>
+                <li><a href="order.html"><p>ORDER NOW</p></a></li>
             </ul>
         </nav>
         <div id="overlay" onclick="closeSidebar()">
         </div>
         <ul class="navBarmobile">
-            <li>MENU</li>
-            <li> <img class="logo" id="logo" src="../IMAGES/logo.png"> </li>
+            <li onclick="menu()">MENU</li>
+            <li onclick="home()"> <img class="logo" id="logo" src="../IMAGES/logo.png"> </li>
             <li> 
                 <button id="open-sidebar-button" onclick="openSidebar()">
                     <img src="../IMAGES/hamburger.png" style="height: 20px;" alt="">
