--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
             </div>
             
             <ul class="navBarmobile">
-                <li>MENU</li>
+                <li onclick="menu()">MENU</li>
                 <li> <img class="logo" id="logo" src="IMAGES/logo.png"> </li>
                 <li> 
                     <button id="open-sidebar-button" onclick="openSidebar()">
