--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
             <img src="IMAGES/Picture6_element.png" alt="">
         </div>
         <div>
-            <video class="scroll-video" playsinline muted>
+            <video class="scroll-video" playsinline loop>
                 <source src="IMAGES/Fruitopia Vid.mp4" type="video/mp4">
                 
               </video>
@@ -327,8 +327,8 @@
 
     <footer>
         <div class="footer-icon">
-            <img src="../IMAGES/fbbrown.jpg" alt="">
-            <img src="../IMAGES/igbrown.jpg" alt="">
+            <img src="IMAGES/fbbrown.jpg" alt="">
+            <img src="IMAGES/igbrown.jpg" alt="">
         </div>
         <p>Fruitopia Food Corp.</p>
     </footer>
