--- a/index.html
+++ b/index.html
@@ -327,8 +327,8 @@
 
     <footer>
         <div class="footer-icon">
-            <img src="IMAGES/fbbrown.jpg" alt="">
-            <img src="IMAGES/igbrown.jpg" alt="">
+            <img onclick="fb()" src="IMAGES/fbbrown.jpg" alt="">
+            <img onclick="ig()" src="IMAGES/igbrown.jpg" alt="">
         </div>
         <p>Fruitopia Food Corp.</p>
     </footer>
