--- a/HTML/about.html
+++ b/HTML/about.html
@@ -161,8 +161,8 @@
     </article>
     <footer>
         <div class="footer-icon">
-            <img onclick="fb()" src="IMAGES/fbbrown.jpg" alt="">
-            <img onclick="ig()" src="IMAGES/igbrown.jpg" alt="">
+            <img onclick="fb()" src="../IMAGES/fbbrown.jpg" alt="">
+            <img onclick="ig()" src="../IMAGES/igbrown.jpg" alt="">
         </div>
         <p>Fruitopia Food Corp.</p>
     </footer>
