--- a/HTML/order.html
+++ b/HTML/order.html
@@ -72,7 +72,7 @@
             <img class="monitor" src="../IMAGES/desktop.png" alt="">
             <img class="logod" src="../IMAGES/logo.png" alt="">
             <img class="qr" src="../IMAGES/frame.png" alt="">
-            <a href="https://www.facebook.com/profile.php?id=61573540895348&rdid=sXCAASATWfIc1jex&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2F1AZADLNTP3%2F#">@Fruitopia Food Corp.</a>
+            <a href="fb://profile/61573540895348">@Fruitopia Food Corp.</a>
         </div>
     </article>
     <article class="a3">
@@ -145,10 +145,10 @@
             </div>
         </div>
     </article>
-    <article class="a5">
+    <article class="a5" style="margin-top: 10%;">
         <img src="../IMAGES/scroll.png" alt="">
-        <h1 style="text-align: center; font-weight: 700; font-size: 20px; margin-top: 10%; padding-inline: 13%;">How can I sign up for our raffle prize promotion?</h1>
-        <p style="text-align: center; font-size: 1.1rem; z-index: 2; padding-inline: 13%;">
+        <h1 style="text-align: center; font-weight: 700; font-size: 5vw; margin-top: 10%; padding-inline: 13%;">How can I sign up for our raffle prize promotion?</h1>
+        <p style="text-align: center; font-size: 4vw; z-index: 2; padding-inline: 13%;">
             First, take a screenshot of you following us on our social media accounts (Facebook and Instagram).
             <br>
             <br>
@@ -162,8 +162,8 @@
     </article>
     <footer>
         <div class="footer-icon">
-            <img onclick="fb()" src="IMAGES/fbbrown.jpg" alt="">
-            <img onclick="ig()" src="IMAGES/igbrown.jpg" alt="">
+            <img onclick="fb()" src="../IMAGES/fbbrown.jpg" alt="">
+            <img onclick="ig()" src="../IMAGES/igbrown.jpg" alt="">
         </div>
         <p>Fruitopia Food Corp.</p>
     </footer>
