--- a/HTML/contacts.html
+++ b/HTML/contacts.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact Us</title>
     <link rel="stylesheet" href="../CSS/headerfooter.css">
     <link rel="stylesheet" href="../CSS/contacts.css">
     
@@ -65,7 +65,7 @@
                     <h2>LEAVE US SOME FEEDBACK!</h2>
                     <hr>
                 </div>
-                <input type="hidden" name="access_key" value="9a6cffed-aeb9-40dc-b892-955f7032c720">
+                <input type="hidden" name="access_key" value="772f5a1d-75ea-45ea-84c4-77a376136af1">
                 <input type="text" name="name" placeholder="Your Name, leave empty to remain anonymous." class="contact-inputs" >
                 <input type="text" name="email" placeholder="Your Email, leave empty to remain anonymous." class="contact-inputs" >
                 <textarea name="message" placeholder="Your Message" class="contact-inputs" required></textarea>
@@ -112,8 +112,8 @@
     </article>
     <footer>
         <div class="footer-icon">
-            <img onclick="fb()" src="IMAGES/fbbrown.jpg" alt="">
-            <img onclick="ig()" src="IMAGES/igbrown.jpg" alt="">
+            <img onclick="fb()" src="../IMAGES/fbbrown.jpg" alt="">
+            <img onclick="ig()" src="../IMAGES/igbrown.jpg" alt="">
         </div>
         <p>Fruitopia Food Corp.</p>
     </footer>
