--- a/HTML/order.html
+++ b/HTML/order.html
@@ -72,7 +72,7 @@
             <img class="monitor" src="../IMAGES/desktop.png" alt="">
             <img class="logod" src="../IMAGES/logo.png" alt="">
             <img class="qr" src="../IMAGES/frame.png" alt="">
-            <a href="fb://profile/61573540895348">@Fruitopia Food Corp.</a>
+            <a href="https://www.facebook.com/share/p/157gf44niS/">@Fruitopia Food Corp.</a>
         </div>
     </article>
     <article class="a3">
